--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,2 +1,5 @@
+0.0.2 - updated bump-script
+0.0.2 - updated bump-script
+0.0.2 - updated bump-script
 0.0.1 - fixed bump script
 0.0.0 - initial version
